--- a/ball.css
+++ b/ball.css
@@ -34,4 +34,6 @@
 .style1 {font-weight: bold}
 body {
 	background-image: url(DSC_0152.JPG);
+	<img src="Images/Shovan.jpg" alt="my picture" width="128" height="128"/>
 }
+
