--- a/ball.css
+++ b/ball.css
@@ -1,6 +1,9 @@
 .back{
 	background-color: rgba(100,120,210,0.5);
 }
+ a:link {
+  color:#f5fc83 ;
+}
 .p1{
 	font-style: italic;
 	font-size: 60px;
